# discus

./: .gitignore  8.txt  Cargo.toml  LICENSE  Makefile  README.md  acc-integration.pcb  acc-integration.sch  accumulate.sch  andnand.sch  bit-board.kicad_pcb  bit-board.kicad_prl  bit-board.kicad_pro  board.py  cached.py  capsearch.py  clockdrive.sch  control-board.kicad_pcb  control-board.kicad_prl  control-board.kicad_pro  dflipflop.sch  flipflop.sch  full.sch  fulli.sch  gafrc  gnetlistrc  incnp.sch  incnx.sch  incpn.sch  kicad.py  latch.sch  lepton.conf  make-md.py  nand.sch  nor.sch  nor3.sch  not.sch  reg4.sch  reg4.sym  reg4by4.sch  (+15 more)
Parts.pretty/: 0402w.kicad_mod  0603-load.kicad_mod  0603-pull.kicad_mod  0603-strong.kicad_mod  0603.kicad_mod  C_0402.kicad_mod  R_0402_load.kicad_mod  R_0402_pull.kicad_mod  R_0402_strong.kicad_mod  SOD523-diode.kicad_mod  SOD523-schottky.kicad_mod  SOD523.kicad_mod  SOT23_baw56.kicad_mod  SOT23_bias.kicad_mod  SOT23_bjt.kicad_mod  SOT23_nmos.kicad_mod  SOT23_pmos.kicad_mod  pci-edge-3v.kicad_mod  sot23-baw56.kicad_mod  sot23-nmos.kicad_mod  sot23-pmos.kicad_mod  sot323-bjt.kicad_mod  sot323-hbt.kicad_mod
accumulate-gerber/: BoardOutline.gbr  BotSide.gbr  BotSilkscreen.gbr  BotSoldermask.gbr  Drill.cnc  README.txt  TopSide.gbr  TopSilkscreen.gbr  TopSolderMask.gbr  UnplatedDrill.cnc
board/: bit-board-pins.csv  bit-board.pcb  bit-extra.sch  bit.sch  control-board-pins.csv  control-board.pcb  control.sch  cpu.sch  dram32byte.sch  dram64byte.md  dram64byte.sch  jram32byte.sch  pc.sch  rom128byte.sch  rom128byte.sym  rom32byte.sch  (+6 more)
(+628 files in other folders)
