[package]
name = "discus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alu"
path = "src/alu.rs"

[[bin]]
name = "opdecode"
path = "src/opdecode.rs"

[[bin]]
name = "pcdecode"
path = "src/pcdecode.rs"

[[bin]]
name = "ramdecode"
path = "src/ramdecode.rs"

[[bin]]
name = "romdecode"
path = "src/romdecode.rs"

[[bin]]
name = "sp"
path = "src/sp.rs"

[[bin]]
name = "verify"
path = "src/verify.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
